docs: update performance, troubleshooting, and backend docs and commit filter transpiler changes